# agent-sandbox

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  how-it-works-in-practice.md  security-model.md  usage.md
docs/primers/: bubblewrap.md  cgroups.md  isolation-basics.md  namespaces.md  seccomp.md
examples/: .isolate.yml
src/isolate/: __init__.py  __main__.py  agents.py  cli.py  config.py  doctor.py  paths.py  profiles.py  resources.py  sandbox.py
tests/: test_agents.py  test_cli.py  test_config.py  test_doctor.py  test_paths.py  test_profiles.py  test_resources.py  test_sandbox.py  test_smoke.py
tests/integration/: test_isolation.py
